2001-02-11  H.J. Lu  <hjl@gnu.org>

	* config/default.exp: Set up gcc_gas_flag.

	* binutils-all/objcopy.exp (copy_setup): Process gcc_gas_flag
	for Linux only.

	* binutils-all/testprog.c: Include <string.h> and don't use
	exit ().

2001-01-16  Matthew Green  <mrg@redhat.com>

	* binutils-all/readelf.s-64: Match readelf -S output.

2000-12-09  Nick Clifton  <nickc@redhat.com>

	* binutils-all/objdump.exp (cpus_expected): Add tic54x and
	tms320c54x.

2000-11-28  Hans-Peter Nilsson  <hp@axis.com>

	* binutils-all/readelf.s: Adjust to readelf.c formatting changes.

2000-11-02  Chris Demetriou  <cgd@sibyte.com>

        * binutils-all/readelf.exp (regexp_diff): Add code
        from gas testsuite to treat "#..." at beginning of line
        as an indicator to skip extra non-matching lines at that
        location.
        (readelf_test): Add support for using a machine-specific
        regexp comparison file.
        (readelf -S test, readelf -s test): Remove v850*-*-* and
        mips*-*-* from list of expected failures.
        * binutils-all/readelf.s: Accomodate changes due to
        additional sections (and therefore section numbering
        differences) on v850*-*-* and mips*-*-* targets.
        * binutils-all/readelf.ss: Likewise.
        * binutils-all/readelf.ss-mips: New file, which matches
        expected output of readelf -s test for mips*-*-*.

2000-10-25  Hans-Peter Nilsson  <hp@axis.com>

	* binutils-all/readelf.exp (-wi test): Add cris-*-* to xfails.

2000-10-19  Chris Demetriou  <cgd@sibyte.com>

        * binutils-all/readelf.exp (readelf_test): Work properly
        when multiple targets expect failtures.
        (readelf -S test, readelf -s test): Expect mips*-*-*
        to fail.

2000-07-10  Alan Modra  <alan@linuxcare.com.au>

	* lib/utils-lib.exp (default_binutils_assemble): Don't do the hppa
	sed fudges for hppa-linux.

2000-07-01  Frank Ch. Eigler  <fche@redhat.com>

	* binutils-all/objdump.exp (cpus_expected, cpus_regex): Reorganize